--- a/MyStoreDataDrivenTest/pom.xml
+++ b/MyStoreDataDrivenTest/pom.xml
@@ -39,7 +39,7 @@
   <groupId>org.testng</groupId> 
   <artifactId>testng</artifactId> 
   <version>6.14.3</version> 
-  <scope>test</scope> 
+  <scope>compile</scope> 
   </dependency>
   <dependency>
     <groupId>io.github.bonigarcia</groupId>
